crates/test-files/fixtures/compile_errors/external_call_type_error.fe
use std::context::Context

contract Foo:
    pub fn bar(a: u256):
        pass

contract FooProxy:
    pub fn baz(ctx: Context):
        Foo(ctx, address(0)).bar("hello world")